# playlist-builder

./: AGENTS.md  README.md  pyproject.toml
plans/: 2026-05-23-fabric-playlists-package-v2.md
src/fabric_playlists/: __init__.py  cli.py  config.py  converter.py  models.py  playlist.py  scanner.py
src/playlist_builder/: __init__.py  cli.py  config.py  converter.py  playlist.py  scanner.py
tests/: __init__.py  conftest.py  test_cli.py  test_config.py  test_converter.py  test_models.py  test_playlist.py  test_scanner.py
